5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1602_2894.log
== TEST (2019-03-20 18:37:48) 
-- CODE:
var = float(input("qual o valor unitario do jogo: "))
total=float(8*var+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:38:12) 
-- CODE:
var = float(input("qual o valor unitario do jogo: "))
total=float(8*var+45)
print(total)
-- EXECUTION TIME:
0.164089
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:02:33) 
-- CODE:
x = float(input("qual o valor unitario do jogo: "))
total=float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:41:07) 
-- CODE:
x =float(input("qual o valor unitario do jogo: "))
total=float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:41:23) 
-- CODE:
x =float(input("qual o valor unitario do jogo: "))
total=float(8*x+45)
print(total)
-- EXECUTION TIME:
0.154989
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:46:13) 
-- CODE:
x =float(input("qual o valor unitario do jogo: "))
total=float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:46:31) 
-- CODE:
x =float(input("qual o valor unitario do jogo: "))
total=float(8*x+45)
print(total)
-- EXECUTION TIME:
0.177508
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:17:37) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:17:57) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.153364
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:20:30) 
-- CODE:
x =float(input("o valor unitario: "))
total =input(8*x+45)
print(total)
	 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total =input(8*x+45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:20:49) 
-- CODE:
x =float(input("o valor unitario: "))
total =input(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.197786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    total =input(8*x+45)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:21:09) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
	 
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:21:21) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.285336
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:28:34) 
-- CODE:
x =float(input("valor unitario: "))
total+float(8*x+45)
print(total)
	 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total+float(8*x+45)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:29:45) 
-- CODE:
x =float(input("valor unitario: "))
total=float(8*x+45)
print(total)
	 
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:30:02) 
-- CODE:
x =float(input("valor unitario: "))
total=float(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.140544
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:30:18) 
-- CODE:
x =float(input("valor unitario: "))
total=float(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.168586
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:33:10) 
-- CODE:
x =float(input("o valor unitario: "))  
total=float(8*x+45)
print(total)
	 
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:33:21) 
-- CODE:
x =float(input("o valor unitario: "))  
total=float(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.148889
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:06:46) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
	 
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:07:02) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
	 
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:07:21) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
	 
-- EXECUTION TIME:
0.17927
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:10:07) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:10:14) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.208825
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:57:06) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 11:59:20) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 11:59:40) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.127696
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:45:57) 
-- CODE:
x =float(input("valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:46:11) 
-- CODE:
x =float(input("valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.19954
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:51:31) 
-- CODE:
x =float(input("valor unitario: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:51:40) 
-- CODE:
x =float(input("valor unitario: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.174538
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:15) 
-- CODE:
x =float(input("o valor unitario do jogo: "))]
total =float(8*x+45)
print(total)
-- ERROR:
File "XXXX", line 1
    x =float(input())]
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:33) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:47) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:15:59) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.178987
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:39:06) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:39:16) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.208934
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:50:47) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(x/3)
print(total)
-- OUTPUT:
0.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:51:03) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(x/3)
print(total)
-- OUTPUT:
0.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:51:40) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(x/3)*x
print(total)
-- OUTPUT:
0.5043
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:52:23) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:52:33) 
-- CODE:
x =float(input("o valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.156019
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:40:15) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(tota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(tota)
NameError: name 'tota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:40:24) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:40:38) 
-- CODE:
x =float(input("o valor unitario: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.225741
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:17:40) 
-- CODE:
x =float(input("valor unitario: "))
total=float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:17:48) 
-- CODE:
x =float(input("valor unitario: "))
total=float(8*x+45)
print(total)
-- EXECUTION TIME:
0.126035
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:38:20) 
-- CODE:
x =float(input("valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:38:29) 
-- CODE:
x =float(input("valor unitario do jogo: "))
total =float(8*x+45)
print(total)
-- EXECUTION TIME:
0.131691
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
